--- a/Resources/doc/i18n.md
+++ b/Resources/doc/i18n.md
@@ -12,7 +12,7 @@
 
 #### Define custom settings names
 
-1. Create _yml_ or _xliff_ file for domain _settings_ (example: _settings.en.yml_) in any of your bundles or directly in _app/Resources_ (note: your bundle must be activated after _DmishhSettingsBundle_ in _AppKernel.php_)
+1. Create _yml_ or _xliff_ file for domain _settings_ (example: _settings.en.yml_) in any of your bundles or directly in _app/Resources_ (note: your bundle must be activated after _MharySettingsBundle_ in _AppKernel.php_)
 1. Add your settings translations like in the following example for _yml_ format:
 
 ```yaml
@@ -25,7 +25,7 @@ Clear your cache with ```app/console cache:clear```
 
 #### Provide translations for choice type
 
-1. Create, if not yet, _yml_ or _xliff_ file for domain _settings_ (example: _settings.en.yml_) in any of your bundles or directly in _app/Resources_ (note: your bundle must be activated after _DmishhSettingsBundle_ in _AppKernel.php_)
+1. Create, if not yet, _yml_ or _xliff_ file for domain _settings_ (example: _settings.en.yml_) in any of your bundles or directly in _app/Resources_ (note: your bundle must be activated after _MharySettingsBundle_ in _AppKernel.php_)
 1. Add your choices translations like in the following example for _yml_ format (add <i>_choice</i> postfix to your setting's name):
 
 ```yaml
